codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_side_requests_forked_side_question_while_task_running.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 265
expression: normalized_backend_snapshot(terminal.backend())
---
"                                                                                "
"• Working (0s · 0 tokens • esc to interrupt)                                    "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  gpt-5.5 default                                             Side starting...  "
